// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDUtils.proc "HTML: NOTE_REF_WITH_REHYPE": respRehype 1`] = `
VFile {
  "contents": "<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">foo</span></div>
<a href=\\"foo-id.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>
<p><a href=\\"bar.html\\">bar</a></p>
</div>    
</div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "HTML: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](/bond/image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_DENDRON: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 32,
              "line": 1,
              "offset": 31,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Title: Foo. Bond: 42 Fname: foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 32,
          "line": 1,
          "offset": 31,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 2,
      "offset": 32,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respProcess 1`] = `
VFile {
  "contents": "Title: Foo. Bond: 42 Fname: foo

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: WITH_VARIABLE": respRehype 1`] = `
VFile {
  "contents": "<p>Title: Foo. Bond: 42 Fname: foo</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_ENHANCED_PREVIEW: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_FOOTNOTES" 1`] = `
VFile {
  "contents": "---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

Here is a footnote reference,[^1]

[^1]: Here is the footnote.

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respParse 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 32,
              "line": 1,
              "offset": 31,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Title: Foo. Bond: 42 Fname: foo",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 32,
          "line": 1,
          "offset": 31,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 2,
      "offset": 32,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respProcess 1`] = `
VFile {
  "contents": "Title: Foo. Bond: 42 Fname: foo

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: WITH_VARIABLE": respRehype 1`] = `
VFile {
  "contents": "<p>Title: Foo. Bond: 42 Fname: foo</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: asset_prefix undefined" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`MDUtils.proc "MD_REGULAR: asset_prefix" 1`] = `
VFile {
  "contents": "![alt-text](image-url.jpg)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
